tcp-liveness-readiness.yaml
apiVersion: v1
kind: Pod
metadata:
  name: computacaoemnuvem
  labels:
    app: computacaoemnuvem
spec:
  containers:
  - name: computacaoemnuvem
    image: gcr.io/cloudcomputworlddevelopment/computacaoemnuvem:v1
    ports:
    - containerPort: 8080
    readinessProbe:
      tcpSocket:
        port: 8080
      initialDelaySeconds: 5
      periodSeconds: 10
    livenessProbe:
      tcpSocket:
        port: 8080
      initialDelaySeconds: 15
      periodSeconds: 20
