web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: computacao-web
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: computacao-web
  type: NodePort
